--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 				<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3156050">
 				<font size="2">Download</font></a><font size="2"> the original 
 				paper or find an
-				<a href="Do%20Devolutionary%20Political%20Institutions%20Enhance%20a%20Financial%20Centre%20ID.mht">HTML version</a> of the paper </font></td>
+				<a href="Do%20Devolutionary%20Political%20Institutions%20Enhance%20a%20Financial%20Centre%20ID.mht">HTML version</a> of the paper 
+				<a href="Do%20Devolutionary%20Political%20Institutions%20Enhance%20a%20Financial%20Centre%20ID.htm">
+				here</a>. </font></td>
 			</tr>
 			<tr>
 				<td width="152">
